--- a/templates/upload.html
+++ b/templates/upload.html
@@ -5,6 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Upload Notes</title>
 		<script src="https://cdn.tailwindcss.com"></script>
+		<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+		<link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
 	</head>
 	<body class="bg-gray-100 min-h-screen flex flex-col items-center justify-center">
 		<div class="w-full max-w-md bg-white rounded-lg shadow-xl p-6 border border-base-200">
