--- a/templates/notes_list.html
+++ b/templates/notes_list.html
@@ -129,6 +129,7 @@
                   'Economics': 'badge-accent',
                   'Electronics': 'badge-info',
                   'Computer Organization': 'badge-success',
+                  'Other': 'badge-outline',
                   } %}
                   <div class="badge badge-sm sm:badge-md {{ tag_colors.get(note['tags'].title(), 'badge-ghost') }}">{{
                     note['tags'].title() }}</div>
