Add stream selection to frontpage form

--- a/templates/form.html
+++ b/templates/form.html
@@ -81,6 +81,15 @@
 						<input type="text" name="reg" id="reg" required class="input input-bordered w-full rounded-lg" placeholder="Enter your registration number" />
 					</div>
 					<div>
+						<label class="block font-semibold mb-1">Stream</label>
+						<select name="stream" id="stream" required class="select select-bordered w-full rounded-lg">
+							<option value="">Select Stream</option>
+							<option value="1">CSE</option>
+							<option value="2">IT</option>
+							<option value="3">ECE</option>
+						</select>
+					</div>
+					<div>
 						<label class="block font-semibold mb-1">Semester</label>
 						<select name="semester" id="semester" required class="select select-bordered w-full rounded-lg">
 							<option value="">Select Semester</option>
