Add CSE AIML option to frontpage form dropdown

--- a/templates/form.html
+++ b/templates/form.html
@@ -87,6 +87,7 @@
 							<option value="1">CSE</option>
 							<option value="2">IT</option>
 							<option value="3">ECE</option>
+							<option value="4">CSE AIML</option>
 						</select>
 					</div>
 					<div>
