--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>Profile</title>
+  <title>Profile</title>
 </head>
+
 <body>
-    <h1>Your Profile</h1>
-    <p>Name: {{ user.name }}</p>
-    <p>Email: {{ user.email }}</p>
-    <a href="{{ url_for('main.index') }}">Back to Home</a>
+  <h1>Your Profile</h1>
+  <p>Name: {{ user.name }}</p>
+  <p>Email: {{ user.email }}</p>
+
+  {% if google_profile %}
+  <section>
+    <h2>Google Details</h2>
+    <pre>{{ google_profile | tojson(indent=2) }}</pre>
+  </section>
+  {% endif %}
+
+  {% if discord_profile %}
+  <section>
+    <h2>Discord Details</h2>
+    <pre>{{ discord_profile | tojson(indent=2) }}</pre>
+  </section>
+  {% endif %}
+
+  <a href="{{ url_for('main.index') }}">Back to Home</a>
 </body>
+
 </html>
